# sandstorm

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  Procfile  README.md  SECURITY.md  build_template.py  cliff.toml  docker-compose.yml  pyproject.toml  sandstorm.json  slack-manifest.yaml
.claude/skills/pptx/scripts/: html2pptx.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  claude-code-review.yml  publish.yml
clients/typescript/: README.md  package-lock.json  package.json  tsconfig.json
clients/typescript/examples/: chat.ts
clients/typescript/src/: index.ts  types.ts
deploy/: README.md  docker-compose.langfuse.yml  railway.json
docs/: api.md  client.md  comparison.md  configuration.md  custom-mcps.md  deployment.md  faq-vs-managed-agents.md  getting-started.md  managed-agents-interop.md  memory.md  multi-llm.md  observability.md  openrouter.md  replay.md  slack.md  triggers.md
examples/: README.md
examples/code-reviewer/: README.md  sandstorm.json
examples/competitive-analysis/: README.md  sandstorm.json
examples/content-brief/: README.md  sandstorm.json
examples/docs-to-openapi/: README.md  sandstorm.json
examples/issue-triage/: README.md  sandstorm.json
examples/repo-migration/: README.md  sandstorm.json
examples/security-auditor/: README.md  sandstorm.json
examples/security-auditor/.claude/skills/owasp-top-10/: SKILL.md
examples/silkyway/: README.md  sandstorm.json
scripts/: generate_icon.py
src/claude_sandbox/: main.py  models.py  runner.mjs  sandbox.py
src/sandstorm/: __init__.py  __main__.py  app_home.py  auth.py  cancellation.py  channels.py  cli.py  client.py  config.py  dashboard.html  doctor.py  e2b_api.py  files.py  gchat.py  gchat_app_home.py  gchat_routes.py  main.py  memory.py  models.py  platform.py  runner.mjs  sandbox.py  slack-manifest.yaml  slack.py  slack_routes.py  starter_catalog.py  store.py  telemetry.py  toolpacks.py  triggers.py
src/sandstorm/starters/: __init__.py
src/sandstorm/starters/_shared/: env.example
src/sandstorm/starters/api-extractor/: README.md  sandstorm.json
src/sandstorm/starters/code-review/: README.md  sandstorm.json
src/sandstorm/starters/document-analyst/: README.md  sandstorm.json
src/sandstorm/starters/general-assistant/: README.md  sandstorm.json
src/sandstorm/starters/research-brief/: README.md  sandstorm.json
src/sandstorm/starters/security-audit/: README.md  sandstorm.json
src/sandstorm/starters/security-audit/claude-skills/owasp-top-10/: SKILL.md
src/sandstorm/starters/support-triage/: README.md  sandstorm.json
tests/: conftest.py  test_app_home.py  test_auth.py  test_cancellation.py  test_channels.py  test_cli.py  test_client.py  test_docs.py  test_doctor.py  test_gchat.py  test_gchat_routes.py  test_health.py  test_memory.py  test_models.py  test_platform.py  test_sandbox_skills.py  test_slack.py  test_slack_routes.py  test_starter_catalog.py  test_store.py  test_telemetry.py  test_triggers.py  test_webhook.py
