[project]
name = "duvo-sandstorm"
version = "0.4.5"
description = "Sandboxed Claude agents on demand. Run Claude Agent SDK in isolated E2B sandboxes and stream results via SSE."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "e2b>=1.4.0",
    "sse-starlette>=2.2.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
telemetry = [
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandstorm"]
artifacts = ["src/sandstorm/runner.mjs"]

[project.scripts]
duvo-sandstorm = "sandstorm.cli:cli"
ds = "sandstorm.cli:cli"

[project.urls]
Homepage = "https://github.com/tomascupr/sandstorm"
Repository = "https://github.com/tomascupr/sandstorm"
Issues = "https://github.com/tomascupr/sandstorm/issues"
Changelog = "https://github.com/tomascupr/sandstorm/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
