[project]
name = "duvo-sandstorm"
version = "0.8.1"
description = "Open-source runtime for general-purpose AI agents in isolated sandboxes."
keywords = ["ai-agents", "anthropic", "claude", "e2b", "fastapi", "openrouter", "sandbox", "slack"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "e2b>=1.4.0",
    "sse-starlette>=2.2.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.optional-dependencies]
slack = [
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.34.0",
    "aiohttp>=3.9.0",
]
client = ["httpx>=0.27", "httpx-sse>=0.4"]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "httpx-sse>=0.4",
    "ruff>=0.8.6",
    "pyright>=1.1.0",
    "pre-commit>=4.0.0",
]
telemetry = [
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandstorm"]
artifacts = [
    "src/sandstorm/runner.mjs",
    "src/sandstorm/slack-manifest.yaml",
    "src/sandstorm/starters/**/*",
]

[project.scripts]
duvo-sandstorm = "sandstorm.cli:cli"
ds = "sandstorm.cli:cli"

[project.urls]
Homepage = "https://github.com/tomascupr/sandstorm"
Repository = "https://github.com/tomascupr/sandstorm"
Documentation = "https://github.com/tomascupr/sandstorm#readme"
Issues = "https://github.com/tomascupr/sandstorm/issues"
Changelog = "https://github.com/tomascupr/sandstorm/blob/main/CHANGELOG.md"
Discussions = "https://github.com/tomascupr/sandstorm/discussions"
Examples = "https://github.com/tomascupr/sandstorm/tree/main/examples"
Security = "https://github.com/tomascupr/sandstorm/blob/main/SECURITY.md"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src/sandstorm"]
typeCheckingMode = "basic"
reportMissingImports = false

[tool.pytest.ini_options]
testpaths = ["tests"]
